--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.8.0
+bcrypt==4.2.1
 certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
@@ -14,17 +16,23 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.10.5
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
@@ -34,8 +42,10 @@ SQLAlchemy==2.0.37
 sqlmodel==0.0.22
 starlette==0.41.3
 strawberry-graphql==0.258.0
+tomli==2.2.1
 typer==0.15.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
